<resources>
    <string name="app_name" translatable="false">iNNOMED</string>
    <string name="profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="calender">Appointements</string>
    <string name="location">Location</string>
    <string name="personal_informations">Profile</string>
    <string name="title_home">Home</string>
    <string name="id_medical_number">ID / Medical Number</string>
    <string name="loginbut">Login</string>
    <string name="registertxt">Register</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="share_app_with_friends">Share App With Friends</string>
    <string name="sign_out">Sign Out</string>
    <string name="already_registerd">Already Registerd?</string>
    <string name="login">Login</string>
    <string name="en">EN</string>
    <string name="doctor_s_cvs">Doctor\'s CV</string>
    <string name="surveys">Serveys</string>
    <string name="rate_us">Rate US</string>
    <string name="our_news">Our News</string>
    <string name="tab_text_1">Current</string>
    <string name="tab_text_2">History</string>
    <string name="tab_text_3">Medicine</string>
    <string name="tab_text_4">Radiology</string>
    <string name="tab_text_5">Laboratory</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="done">done</string>
    <string name="mobile">Mobile</string>
    <string name="medical_number">Medical Number</string>
    <string name="identity_number">Identity Number</string>
    <string name="full_name">Full Name</string>
    <string name="service_quality">Service Quality</string>
    <string name="time_frame">Time Frame</string>
    <string name="start_of_a_service">Start Of a Service</string>
    <string name="staff_behavior">Staff Behavior</string>
    <string name="leave_a_comment">Leave a Comment...</string>
    <string name="submit">Submit</string>
    <string name="Appointments">Appointments</string>
    <string name="Services">Services</string>
    <string name="patientportal">Patient Portal</string>
    <string name="open_in_google_maps">open in google maps</string>
    <string name="cancel">Cancel</string>
    <string name="get_directions">Get Directions</string>
    <string name="ServiceReview">Service Review</string>
    <string name="save">Save</string>
    <string name="nationality">Nationality</string>
    <string name="city">City</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="safeoflinedata">Safe Ofline Data</string>
    <string name="notmebefappointment">Notifiy Me Before Appointements</string>
    <string name="notmewithmedicalappointment">Notify Me With Medical time</string>
    <string name="cancelhation">Cancellation</string>
    <string name="reason_to_cancel">Reason to cancel:</string>
    <string name="reason_one">Reason one</string>
    <string name="reason_two">Reason Two</string>
    <string name="reason_three">Reason Three</string>
    <string name="other">Other</string>
    <string name="comment">Comment</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="are_you_sure_you_want_to_nchange_language_to_arabic">Are You Sure You Want To\nChange Language to Arabic ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="the_greatest_wealth_is_health">The Greatest Wealth is Health</string>
    <string name="search_by_speciality">Search by Speciality</string>
    <string name="search_by_doctor_name">Search by Doctor Name</string>
    <string name="allow_hospital_to_access_your_nlocation_while_you_are_using_the_app">\t\tAllow &quot; Hospital &quot; to access your\n location while you are using the App?</string>
    <string name="hospital_will_use_your_location_to_show_nearest_n_services_to_you">Hospital will use your location to show nearest\n\t\t\t\t\t\t\tservices to you.</string>
    <string name="don_t_allow">Don\'t Allow</string>
    <string name="allow">Allow</string>
    <string name="your_appointment_has_been_n_t_tsent_successfully">Your appointment has been \n\t\t\t sent successfully</string>
    <string name="call">Call</string>
    <string name="varification_code">Varification Code</string>
    <string name="please_type_the_varification_code_sent_to">Please Type the varification code sent to</string>
    <string name="resend_code">Resend Code</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes ?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <string name="emedicnum">Please Enter Medical Number</string>
    <string name="eidentnum">Please Enter Identity Number</string>
    <string name="efullname">please Enter  Full Name</string>
    <string name="emobnum">Please Enter a Valid Mobile Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select">Select</string>
    <string name="available_slots">Available Slots</string>
    <string name="selectdate">Select Date &amp; Time</string>
    <string name="allow_quot_hospital_quot_to_send_you_n_t_t_t_tnotifications">Allow \"Hospital\" to send you \n\t\t\t\tNotifications?</string>
    <string name="notifications_may_include_alerts_sounds_nand_icon_badges_these_can_be_configured_in_n_t_t_t_t_t_t_t_tsettings">Notifications may include alerts, sounds,\n and icon badges.These can be configured  \n\t\t\t\t\t\t\t\tin settings</string>
    <string name="selecthospital">Change Hospital</string>
    <string name="search">search</string>
    <string name="hospitals">Hospitals</string>
    <string name="network_error">Check Your Internet Connection !!</string>
    <string name="searchbspech">Search by Speciality</string>
    <string name="book">Book</string>
    <string name="hospital">Hospital</string>
    <string name="specialization">Specialization</string>
    <string name="doctor">Doctor</string>
    <string name="booking_date_and_time">Booking Date and Time</string>
    <string name="confirm">Confirm</string>
    <string name="start_new_booking">Start New Booking</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="x_rays">X-Rays</string>
    <string name="send_message">Send Message</string>
    <string name="book_again">Book again</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="are_you_sure_you_want_to_start_n_new_booking_and_discard_your_n_t_t_t_current_details">Are you sure you want to start \n new booking and discard your \n \t\t\t\t current details?</string>
    <string name="radtest">Radiology Test Name</string>
    <string name="med_test">Medical Test Name</string>
    <string name="zero">00:</string>
    <string name="current">Current</string>
    <string name="confirmappoint">Confirm Appointment</string>
    <string name="about_doctor">About Doctor</string>
    <string name="action_search">Search</string>


</resources>
