<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single"
        android:id="@+id/g11"


        >
        <item
            android:id="@+id/nav_personal"
            android:icon="@drawable/personainocon"
            android:title="@string/personal_informations"

            />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/g2"
        >

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settingsicon"
            android:title="@string/settings" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/g3"

        >
        <item
            android:id="@+id/nav_language"

            app:actionLayout="@layout/navcustomlayout"

            android:icon="@drawable/languageicon"
            android:title="@string/language"
            />

    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/g4"
        >
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/shareicon"
            android:title="@string/share_app_with_friends" />
    </group>


    <group android:checkableBehavior="single"
        android:id="@+id/g5"
        >
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/signouticon"
            android:title="@string/sign_out" />

    </group>




</menu>
