<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/allow_hospital_to_access_your_nlocation_while_you_are_using_the_app"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/cairosemibold"
        android:textSize="16sp"
        android:layout_margin="5dp"
        >

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hospital_will_use_your_location_to_show_nearest_n_services_to_you"
        android:textColor="#009cdc"
        android:fontFamily="@font/cairoregular"
        android:textSize="12sp"

        >

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dontallow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/don_t_allow"
            android:fontFamily="@font/cairosemibold"
            android:textSize="16sp"
            android:textColor="#c5eeff"

            />


        <Button
            android:id="@+id/allow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/allow"
            android:fontFamily="@font/cairosemibold"
            android:textSize="16sp"
            android:textColor="#c5eeff"

            />


    </LinearLayout>


</LinearLayout>