<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/are_you_sure_you_want_to_nchange_language_to_arabic"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/cairosemibold"
        android:textSize="16sp"
        android:padding="10dp"
        >

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/no"
            android:fontFamily="@font/cairosemibold"
            android:textSize="16sp"
            android:textColor="#c5eeff"

            />


        <Button
            android:id="@+id/yes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/yes"
            android:fontFamily="@font/cairosemibold"
            android:textSize="16sp"
            android:textColor="#c5eeff"

            />


    </LinearLayout>



</LinearLayout>