<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <ImageView
            android:id="@+id/registimg1"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="52dp"
            android:src="@drawable/avatarimg"
            android:layout_marginBottom="20dp"
            android:onClick="SelectiMg"


            />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="5dp"

            >

            <EditText
                android:id="@+id/identnum"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/identity_number"
                android:textSize="16sp"
                android:fontFamily="@font/cairoregular"
                android:inputType="number"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:lineSpacingExtra="2sp"

                >

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="5dp"

            >

            <EditText
                android:id="@+id/mobile"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:textSize="16sp"
                android:fontFamily="@font/cairoregular"
                android:inputType="phone"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:lineSpacingExtra="2sp"

                >

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="5dp"

            >

            <EditText
                android:id="@+id/registeditname"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:textSize="16sp"
                android:fontFamily="@font/cairoregular"
                android:inputType="text"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:lineSpacingExtra="2sp"

                >

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:layout_width="230dp"
            android:layout_height="46dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/buttonfillcorners"
            android:textSize="16sp"
            android:text="@string/registertxt"
            android:id="@+id/registbut1"
            android:textColor="#fff"
            android:fontFamily="@font/cairoregular"


            >


        </Button>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/already_registerd"
                >

            </TextView>
            <TextView
                android:id="@+id/logback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:onClick="Loginback"
                android:layout_marginLeft="14dp"
                >

            </TextView>


        </LinearLayout>




    </LinearLayout>


</ScrollView>