<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >




    <ImageView
        android:id="@+id/loginimg1"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="52dp"
        android:src="@drawable/avatarimg"
        android:layout_marginBottom="20dp"


        />



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="5dp"

        >

        <EditText
            android:id="@+id/loginedit1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/id_medical_number"
            android:textSize="16sp"
            android:fontFamily="@font/cairoregular"
            android:inputType="text"
            android:layout_gravity="center_horizontal"
            android:ems="10"

            >

        </EditText>
    </com.google.android.material.textfield.TextInputLayout>





    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="5dp"

        >

        <EditText
            android:id="@+id/mobilelog"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/mobile"
            android:textSize="16sp"
            android:fontFamily="@font/cairoregular"
            android:inputType="phone"
            android:layout_gravity="center_horizontal"
            android:ems="10"

            >

        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="229dp"
        android:layout_height="46dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:background="@drawable/buttonfillcorners"
        android:textSize="16sp"
        android:text="@string/loginbut"
        android:id="@+id/loginbut1"
        android:textColor="#fff"
        android:fontFamily="@font/cairoregular"


        >


    </Button>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/registertxt"
        android:gravity="center"
        android:id="@+id/registertxt"
        android:textColor="#003376"
        android:onClick="Rgister"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/cairosemibold"
        >

    </TextView>
</LinearLayout>

</ScrollView>